[gd_scene load_steps=6 format=2]

[ext_resource path="res://dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/static/ChivoMono-Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://StartMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -681, -144 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 20
custom_constants/margin_left = 200
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 20.0
margin_right = 824.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Dialogue Editor"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 624.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 100 )
custom_styles/separator = SubResource( 2 )

[node name="NewProjectButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 624.0
margin_bottom = 221.0
text = "+ New Project"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 624.0
margin_bottom = 255.0
text = "Load Project"

[node name="SelectProjectFolder" type="FileDialog" parent="."]
margin_left = 237.0
margin_top = 51.0
margin_right = 730.0
margin_bottom = 437.0
rect_min_size = Vector2( 400, 140 )
window_title = "Add Your Project File"
mode_overrides_title = false
mode = 2
access = 2

[node name="NameProject" type="AcceptDialog" parent="."]
margin_left = 350.0
margin_top = 201.0
margin_right = 662.0
margin_bottom = 306.0
window_title = "Name Your Project"

[node name="LineEdit" type="LineEdit" parent="NameProject"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -40.0
align = 1
placeholder_text = "Name"

[node name="LocateProject" type="FileDialog" parent="."]
margin_left = 203.0
margin_top = 51.0
margin_right = 671.0
margin_bottom = 417.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.ds" )

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewProjectButton" to="." method="_on_NewProjectButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="dir_selected" from="SelectProjectFolder" to="." method="_on_SelectProjectFolder_dir_selected"]
[connection signal="confirmed" from="NameProject" to="." method="_on_NameProject_confirmed"]
[connection signal="file_selected" from="LocateProject" to="." method="_on_LocateProject_file_selected"]
